--- a/fma/implementation/accommodation.html
+++ b/fma/implementation/accommodation.html
@@ -42,14 +42,21 @@
     </div>
     <div data-role="content">
       <h2 id="accommodationtitle"></h2>
-      <div id="accommodationid"></div>
       <div id="contentArea"></div>
-      <div class="favourites"></div>
-      <a href="login.html" data-role="button" data-icon="action" id="resbtn">
-        Reservation
-      </a>
+      <div class="half">
+        <div class="mapslink"></div>
+        <div class="favourites"></div>
+      </div>
+      <div class="half">
+        <div class="gallerylink"></div>
+        <div class="reservation">
+          <a href="login.html" data-role="button" data-icon="action" id="resbtn">
+            Reservation
+          </a>
+        </div>
+      </div>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
