--- a/fma/implementation/index.html
+++ b/fma/implementation/index.html
@@ -67,7 +67,7 @@
       </ul>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
@@ -115,23 +115,23 @@
       <h2>Star rate</h2>
       <ul data-role="listview" data-inset="true">
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?stars=5" data-transition="slidefade">
             Five Star
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?stars=4" data-transition="slidefade">
             Four Star
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?stars=3" data-transition="slidefade">
             Three Star
           </a>
         </li>
       </ul>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
@@ -179,28 +179,28 @@
       <h2>Location</h2>
       <ul data-role="listview" data-inset="true">
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?location=north" data-transition="slidefade">
             North
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?location=south" data-transition="slidefade">
             South
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?location=east" data-transition="slidefade">
             East
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?location=west" data-transition="slidefade">
             West
           </a>
         </li>
       </ul>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
@@ -248,23 +248,23 @@
       <h2>Type</h2>
       <ul data-role="listview" data-inset="true">
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?type=house" data-transition="slidefade">
             House
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?type=flat" data-transition="slidefade">
             Flat
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?type=room" data-transition="slidefade">
             Room
           </a>
         </li>
       </ul>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
@@ -312,28 +312,28 @@
       <h2>Price</h2>
       <ul data-role="listview" data-inset="true">
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?min=0&max=150" data-transition="slidefade">
             Up to &pound;150pw
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?min=150&max=250" data-transition="slidefade">
             &pound;150pw to &pound;250pw
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?min=250&max=350" data-transition="slidefade">
             &pound;250pw to &pound;350pw
           </a>
         </li>
         <li>
-          <a href="list.html" data-transition="slidefade">
+          <a href="list.html?min=350&max=999999" data-transition="slidefade">
             More than &pound;350pw
           </a>
         </li>
       </ul>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
