--- a/fma/implementation/register.html
+++ b/fma/implementation/register.html
@@ -135,7 +135,7 @@
 
       </form>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
