--- a/fma/implementation/contact.html
+++ b/fma/implementation/contact.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
