--- a/fma/implementation/list.html
+++ b/fma/implementation/list.html
@@ -52,7 +52,7 @@
       </ul>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
