--- a/fma/implementation/login.html
+++ b/fma/implementation/login.html
@@ -76,7 +76,7 @@
         </div>
       </form>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
