--- a/fma/implementation/lostmessage.html
+++ b/fma/implementation/lostmessage.html
@@ -47,7 +47,7 @@
         <a href="/login.html">login</a>
       </div>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
