--- a/fma/implementation/maps.html
+++ b/fma/implementation/maps.html
@@ -29,13 +29,14 @@
 <body>
   <div data-role="page" id="map">
     <div data-role="header">
-      <a href="#home"
-         data-icon="home"
+      <a href=""
+         data-rel="back"
+         data-icon="back"
          data-iconpos="notext"
          data-transition="slidefade"
          data-direction="reverse"
          class="ui-alt-icon">
-        Home
+        Go Back
       </a>
       <h1>Zedland</h1>
     </div>
@@ -45,7 +46,7 @@
       <p id="nogeolocation"></p>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
