--- a/fma/implementation/registered.html
+++ b/fma/implementation/registered.html
@@ -46,7 +46,7 @@
         <a href="/">Click here to get started</a>
       </div>
     </div>
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
