--- a/fma/implementation/accommodation.html
+++ b/fma/implementation/accommodation.html
@@ -41,8 +41,8 @@
       <h1>Zedland</h1>
     </div>
     <div data-role="content">
-      <h2 id="accommodationtitle"></h2>
-      <div id="contentArea"></div>
+      <h2 class="accommodationtitle"></h2>
+      <div class="accommodationbody"></div>
       <div class="half">
         <div class="mapslink"></div>
         <div class="favourites"></div>
