Fixes for relative img paths

--- a/fma/implementation/index.html
+++ b/fma/implementation/index.html
@@ -35,7 +35,7 @@
 
     <div data-role="content">
       <div class="logo">
-        <img src="/img/logo.png">
+        <img src="img/logo.png">
       </div>
 
       <ul data-role="listview" data-inset="true">
