--- a/fma/implementation/index.html
+++ b/fma/implementation/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Zedland</title>
+
+  <link rel="icon" type="image/ico" href="favicon.ico">
 
   <link
     rel="stylesheet"
@@ -35,7 +36,7 @@
 
     <div data-role="content">
       <div class="logo">
-        <img src="img/logo.png">
+        <img src="img/logo.png" alt="Logo">
       </div>
 
       <ul data-role="listview" data-inset="true">
@@ -312,22 +313,22 @@
       <h2>Price</h2>
       <ul data-role="listview" data-inset="true">
         <li>
-          <a href="list.html?min=0&max=150" data-transition="slidefade">
+          <a href="list.html?min=0&amp;max=150" data-transition="slidefade">
             Up to &pound;150pw
           </a>
         </li>
         <li>
-          <a href="list.html?min=150&max=250" data-transition="slidefade">
+          <a href="list.html?min=150&amp;max=250" data-transition="slidefade">
             &pound;150pw to &pound;250pw
           </a>
         </li>
         <li>
-          <a href="list.html?min=250&max=350" data-transition="slidefade">
+          <a href="list.html?min=250&amp;max=350" data-transition="slidefade">
             &pound;250pw to &pound;350pw
           </a>
         </li>
         <li>
-          <a href="list.html?min=350&max=999999" data-transition="slidefade">
+          <a href="list.html?min=350&amp;max=999999" data-transition="slidefade">
             More than &pound;350pw
           </a>
         </li>
