--- a/fma/implementation/list.html
+++ b/fma/implementation/list.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Zedland</title>
+
+  <link rel="icon" type="image/ico" href="favicon.ico">
 
   <link
     rel="stylesheet"
