--- a/fma/implementation/register.html
+++ b/fma/implementation/register.html
@@ -6,6 +6,8 @@
 
   <title>Zedland</title>
 
+  <link rel="icon" type="image/ico" href="favicon.ico">
+
   <link
     rel="stylesheet"
     type="text/css"
