Fixed absolute link

--- a/fma/implementation/registered.html
+++ b/fma/implementation/registered.html
@@ -45,7 +45,7 @@
       <h2>Registration processed sucessfully</h2>
       <p>Thank you for registering with Zedland Accommodation Finder</p>
       <div>
-        <a href="/">Click here to get started</a>
+        <a href="#home">Click here to get started</a>
       </div>
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
