More on relative paths

--- a/fma/implementation/login.html
+++ b/fma/implementation/login.html
@@ -70,7 +70,7 @@
           <input type="checkbox" class="js-switch" checked />
           <span class="remember">Remember me?</span>
           <span class="lost-password">
-            <a href="/lost.html">Lost password?</a>
+            <a href="lost.html">Lost password?</a>
           </span>
         </div>
         <div class="submit-btn">
