--- a/fma/implementation/lostmessage.html
+++ b/fma/implementation/lostmessage.html
@@ -46,7 +46,7 @@
       <p>An email has been sent to you with your new password</p>
       <p>Click the link below to return to the login page</p>
       <div>
-        <a href="/login.html">login</a>
+        <a href="login.html">login</a>
       </div>
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
