Removing minlength to pass html validation

--- a/fma/implementation/login.html
+++ b/fma/implementation/login.html
@@ -63,8 +63,7 @@
             type="password"
             name="pass"
             placeholder="Password"
-            required
-            minlength="5">
+            required>
         </div>
         <div class="remember-area">
           <input type="checkbox" class="js-switch" checked />
