--- a/fma/implementation/register.html
+++ b/fma/implementation/register.html
@@ -55,7 +55,6 @@
             name="studentnumber"
             placeholder="Student No"
             required
-            minlength="8"
             maxlength="8">
         </div>
 
@@ -68,8 +67,7 @@
             type="text"
             name="firstname"
             placeholder="First Name"
-            required
-            minlength="3">
+            required>
         </div>
 
         <div>
@@ -81,8 +79,7 @@
             type="text"
             name="lastname"
             placeholder="Last Name"
-            required
-            minlength="3">
+            required>
         </div>
 
         <div>
@@ -115,8 +112,7 @@
             id="startdate"
             type="date"
             name="startdate"
-            placeholder="Start Date"
-            required>
+            placeholder="Start Date">
         </div>
 
         <div>
