Tiny fix for validation

--- a/fma/implementation/register.html
+++ b/fma/implementation/register.html
@@ -107,12 +107,13 @@
         </div>
 
         <div>
-          <label for="startdate" class="ui-hidden-accessible">Start Date:</label>
+          <label for="startdate" class="ui-hidden-accessible">
+            Start Date:
+          </label>
           <input
             id="startdate"
             type="date"
-            name="startdate"
-            placeholder="Start Date">
+            name="startdate">
         </div>
 
         <div>
