Feedback from Gordon

--- a/fma/implementation/accommodation.html
+++ b/fma/implementation/accommodation.html
@@ -48,6 +48,35 @@
       <div class="half">
         <div class="mapslink"></div>
         <div class="favourites"></div>
+
+        <div id="addedtofavourites" data-role="popup">
+          <div data-role="header">
+            <h3>Added</h3>
+          </div>
+          <div data-role="content">
+            <p>
+              This accommodation has now been added to the list of favourites
+            </p>
+            <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline make-blue" data-rel="back">
+              OK
+            </a>
+          </div>
+        </div>
+
+        <div id="removedfromfavourites" data-role="popup">
+          <div data-role="header">
+            <h3>Removed</h3>
+          </div>
+          <div data-role="content">
+            <p>
+              This accommodation has now been removed from the list of favourites
+            </p>
+            <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline make-blue" data-rel="back">
+              OK
+            </a>
+          </div>
+        </div>
+
       </div>
       <div class="half">
         <div class="gallerylink"></div>
