--- a/fma/implementation/index.html
+++ b/fma/implementation/index.html
@@ -42,7 +42,7 @@
       <ul data-role="listview" data-inset="true">
         <li>
           <a href="#rate" data-transition="slidefade">
-            Star Rate
+            Star Rating
           </a>
         </li>
         <li>
