Bug fix with frozen home button

--- a/fma/implementation/registered.html
+++ b/fma/implementation/registered.html
@@ -31,7 +31,8 @@
 <body>
   <div data-role="page" id="booking">
     <div data-role="header">
-      <a href="#home"
+      <a href="/#home"
+         data-ajax="false"
          data-icon="home"
          data-iconpos="notext"
          data-transition="slidefade"
@@ -45,7 +46,7 @@
       <h2>Registration processed sucessfully</h2>
       <p>Thank you for registering with Zedland Accommodation Finder</p>
       <div>
-        <a href="#home">Click here to get started</a>
+        <a href="/#home" data-ajax="false">Click here to get started</a>
       </div>
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
