--- a/fma/implementation/about.html
+++ b/fma/implementation/about.html
@@ -31,7 +31,8 @@
 <body>
   <div data-role="page" id="about">
     <div data-role="header">
-      <a href="#home"
+      <a href="/#home"
+         data-ajax="false"
          data-icon="home"
          data-iconpos="notext"
          data-transition="slidefade"
