--- a/fma/implementation/index.html
+++ b/fma/implementation/index.html
@@ -102,7 +102,8 @@
 
   <div data-role="page" id="rate">
     <div data-role="header">
-      <a href="#home"
+      <a href="/#home"
+         data-ajax="false"
          data-icon="home"
          data-iconpos="notext"
          data-transition="slidefade"
@@ -166,7 +167,8 @@
 
   <div data-role="page" id="location">
     <div data-role="header">
-      <a href="#home"
+      <a href="/#home"
+         data-ajax="false"
          data-icon="home"
          data-iconpos="notext"
          data-transition="slidefade"
@@ -235,7 +237,8 @@
 
   <div data-role="page" id="type">
     <div data-role="header">
-      <a href="#home"
+      <a href="/#home"
+         data-ajax="false"
          data-icon="home"
          data-iconpos="notext"
          data-transition="slidefade"
@@ -299,7 +302,8 @@
 
   <div data-role="page" id="price">
     <div data-role="header">
-      <a href="#home"
+      <a href="/#home"
+         data-ajax="false"
          data-icon="home"
          data-iconpos="notext"
          data-transition="slidefade"
